--- a/Clase11/mobile-first/style.css
+++ b/Clase11/mobile-first/style.css
@@ -16,6 +16,32 @@
     font-family: var(--text-font-family);
 }
 
+.header-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    height: 60px;
+    background-color: var(--text-color-light);
+    padding: 20px;
+}
+
+.style-p-header{
+    display: flex;
+    font-weight: bold;
+    color: black;
+    font-size: 20px;
+}
+
+.header-container .bi{
+    display: flex;
+    font-size: 30px;
+    color: black;
+    font-weight: 700;
+    cursor: pointer;
+}
+
 .text{
     text-align: justify;
     font-size: 16px;
@@ -27,7 +53,7 @@
 }
 
 .section{
-    padding: 32px 16px;
+    padding: 70px 16px;
 }
 
 .section-gap-normal{
