--- a/Tareas/tarea-clase-12/Hostinguer-mediaquery/styles/style.css
+++ b/Tareas/tarea-clase-12/Hostinguer-mediaquery/styles/style.css
@@ -1,5 +1,4 @@
-@import url(normalize.css);
-@import url(hover.css);
+/* @import url(normalize.css);
 
 :root{
     --primary-color: rgb(103,61,230);
@@ -33,11 +32,6 @@ li::marker{
     color: var(--text-color);
 }
 
-.img-host{
-    margin-left: -30px;
-    width: 340px;
-    height: 200px;
-}
 
 .container-texto{
     width: 100%;
@@ -57,4 +51,105 @@ li::marker{
 .container-texto p{
     font-size: 16px;
     color: var(--second-text-color);
+}
+
+@media screen and(max-width: 1050px){
+    .container-section{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    section .cont-text{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-wrap: wrap;
+    }
+    section .container-texto{
+        width: 30%;
+        margin: 10px;
+    }
+}
+
+/* @media screen and(max-width: 720px){
+    .img-host{
+        display: flex;
+        align-content: center;
+    }
+} */
+
+@import url(normalize.css);
+
+:root{
+    --primary-color: rgb(103,61,230);
+    --second-color: rgb(80,37,209);
+    --text-color: rgb(254,255,255);
+    --second-text-color: rgba(254, 255, 255, 0.932);
+
+}
+
+.container-section{
+    
+    display: flex;
+    flex-direction: column;
+}
+
+.text-color{
+    color: var(--second-text-color);
+    font-size: 15px;
+    line-height: 1.5;
+}
+
+.container-ul{
+    margin: 25px;
+}
+
+.container-ul li{
+    padding-bottom: 12px;
+}
+
+li::marker{
+    content: "✔  ";
+    color: var(--text-color);
+}
+
+
+.container-texto{
+    width: 100%;
+    padding: 40px;
+    margin-top: 40px;
+    background-color: var(--second-color);
+    display: flex;
+    flex-direction: column;
+    border-radius: 4px;
+}
+
+.container-texto h2{
+    font-size: 18px;
+    padding-bottom: 15px;
+}
+
+.container-texto p{
+    font-size: 16px;
+    color: var(--second-text-color);
+}
+
+@media screen and (max-width: 1050px){
+    .container-section{       
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    div .cont-text{        
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-wrap: wrap;
+    }
+    section .container-texto{        
+        width: 30%;
+        margin: 10px;
+    }
 }
