--- a/Tareas/tarea-clase-12/Hostinguer-mediaquery/styles/normalize.css
+++ b/Tareas/tarea-clase-12/Hostinguer-mediaquery/styles/normalize.css
@@ -1,17 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
-
 *{
-    box-sizing: border-box;
-    margin: 0;
     padding: 0;
-    font-family: "DM Sans", sans-serif;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-body{
-    background-color: var(--primary-color);
-    margin: 20px;
-}
-
-h1, h2{
-    color: var(--text-color);
+ul{
+    list-style-type: none;
 }
