--- a/Tareas/tarea-clase-20-js/style.css
+++ b/Tareas/tarea-clase-20-js/style.css
@@ -6,11 +6,12 @@
     height: 50px;
     background-color: #fcfcfd;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     margin-top: 50px;
     border-bottom: 1px solid rgba(138, 137, 137, 0.418);
     border-top: 1px solid rgba(138, 137, 137, 0.418);
+    padding: 0 58px 0 58px;
 }
 
 .btn-container{
@@ -18,8 +19,8 @@
     justify-content: space-between;
     flex-direction: row;
     cursor: pointer;
-    color: rgba(124, 117, 117, 0.822);
-    font-weight: 500;
+    color: rgba(44, 43, 43, 0.61);
+    font-weight: 700;
 }
 
 .container-checkbox{
@@ -30,18 +31,87 @@
     border-radius: 5px; /* Bordes redondeados */
 }
 
+.check-colum:checked::before{
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: url(./img/dash-lg.svg);
+    display: block;
+}
+
+.check-fila:checked::before{
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: url(./img/check.svg);
+    background-color: #0070ff;
+    display: block;
+}
+
+.check-fila-true{
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: url(./img/check.svg);
+    background-color: #0070ff;
+    display: block;
+}
+
+.check-fila-true:checked::before{
+    width: 20px;
+    height: 20px;
+    appearance: none;   
+    border: 2px solid #0070ff; /* Borde del checkbox */
+    border-radius: 5px; /* Bordes redondeados */
+}
+
 .container-registros{
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
-    padding-left: 50px;
-    gap: 20px;
+    margin-top: 20px;
+    gap: 30px;
 }
 
 .registro-fila{
     display: flex;
     justify-content: space-between;
+    color: rgba(128, 128, 128, 0.644);
     flex-direction: row;
+    font-weight: bold;
+}
+
+.registro-fila .color-active{
+    display: flex;
+    align-items: center;
+    width: 80px;
+    height: 30px;
+    background-color: #03784710;
+    border-radius: 10px;
+    color: #037847;
+    padding: 14px;
+    gap: 4px;
+}
+
+.bi{
+    font-size: 8px;
+    margin-top: 2px;
+}
+
+.registro-fila .color-inactive{
+    display: flex;
+    align-items: center;
+    width: 80px;
+    height: 30px;
+    background-color: #4749480e;
+    border-radius: 10px;
+    color: #474948;
+    padding: 8px;
+    gap: 4px;
+}
+
+.bi-inac{
+    font-size: 8px;
+    margin-top: 2px;
 }
 
 .btn-container div{
@@ -52,4 +122,8 @@
 .registro-fila div{
     flex: 1;
     text-align: left;
+}
+
+div .margin{
+    margin-left: 58px;
 }
