--- a/Tareas/tarea-clase-24-2-react/src/hover.css
+++ b/Tareas/tarea-clase-24-2-react/src/hover.css
@@ -9,3 +9,19 @@
 .li-select:hover{
     background-color: #0b3b33;
 }
+
+.container-msj:hover{
+    background-color: var(--letter-hover-color);
+    cursor: pointer;
+}
+
+.container-msj:hover .flecha-msj{
+    color: var(--letter-color);
+    transition: transform 0.2s ease;
+    transform: translateX(-15px);
+}
+
+.container-msj:hover .msj{
+    transition: transform 0.2s ease;
+    transform: translateX(-15px);
+}
