--- a/Tareas/tarea-clase-24-2-react/src/style.css
+++ b/Tareas/tarea-clase-24-2-react/src/style.css
@@ -74,7 +74,7 @@
     background-color: var(--primary-color);
     width: 420px;
     height: 100vh;
-    padding: 10px 22px;
+    padding: 10px;
 }
 
 .container-top{
@@ -108,7 +108,6 @@
     background-color: var(--color-fond);
     color: var(--letter-color);
     margin-top: 24px;
-    cursor: pointer;
 }
 
 .container-nav{
@@ -137,7 +136,106 @@
     cursor: pointer;
 }
 
+.caja-li-b{
+    width: 80%;
+    height: 30px;
+    background-color: var(--color-fond);
+    color: var(--letter-color);
+    border-radius: 14px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
 .li-select{
     background-color: #0a332c;
     color: #088e84;
+}
+
+.container-msj{
+    margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: -10px;
+    padding-left: 10px;
+}
+
+.cont-name{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 10px;
+    margin-left: 14px;
+    width: 320px;
+    height: 70px;
+    border-bottom: 1px solid #8696a02d;
+}
+
+.cont-photo img{
+    border-radius: 50%;
+    width: 50px;
+}
+
+.cont-name .name{
+    color: var(--text-color);
+    font-size: 16px;
+    margin-top: 16px;
+}
+
+.ult-msj{
+    color: rgba(255, 255, 255, 0.842);
+    font-size: 14px;
+}
+
+.cont-hora-msj{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    flex-direction: column;
+    height: 70px;
+    padding-right: 5px;
+    padding-bottom: 10px;
+    gap: 5px;
+    border-bottom: 1px solid #8696a02d;
+}
+
+.hora{
+    font-size: 12px;
+    color: var(--noti-color);
+}
+
+.msj{
+    background-color: var(--noti-color);
+    color: var(--primary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    font-weight: bold;
+    font-size: 12px;
+}
+
+.no-msj{
+    margin-bottom: 20px;
+}
+
+.hora-false{
+    font-size: 12px;
+    color: var(--letter-color);
+}
+
+.cont-flecha{
+    display: flex;
+    position: relative;
+    top: 16px;
+}
+
+.flecha-msj{
+    color: transparent;
 }
