Tarea Continuenado WhatsApp Chats

--- a/Tareas/tarea-clase-24-2-react/src/hover.css
+++ b/Tareas/tarea-clase-24-2-react/src/hover.css
@@ -6,6 +6,10 @@
     background-color: #26353d;
 }
 
+.caja-g:hover{
+    background-color: #26353d;
+}
+
 .li-select:hover{
     background-color: #0b3b33;
 }
