--- a/Tareas/tarea-clase-24-2-react/src/style.css
+++ b/Tareas/tarea-clase-24-2-react/src/style.css
@@ -7,6 +7,7 @@
     --text-color: #e9edef;
     --letter-color: #8696a0;
     --letter-hover-color: #8696a034;
+    --border: #8696a02d;
     --noti-color: #00a884;
     --color-fond: #202c33;
 }
@@ -18,13 +19,14 @@
 
 .aside-container{
     background-color: var(--secod-primary-color);
-    width: 62px;
+    width: 64px;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
-    padding: 20px;
+    border-right: 1px solid var(--border);
+    padding: 10px;
 }
 
 .top-aside{
@@ -74,7 +76,7 @@
     background-color: var(--primary-color);
     width: 420px;
     height: 100vh;
-    padding: 10px;
+    padding: 20px;
 }
 
 .container-top{
@@ -172,7 +174,7 @@
     margin-left: 14px;
     width: 320px;
     height: 70px;
-    border-bottom: 1px solid #8696a02d;
+    border-bottom: 1px solid var(--border);
 }
 
 .cont-photo img{
@@ -200,7 +202,7 @@
     padding-right: 5px;
     padding-bottom: 10px;
     gap: 5px;
-    border-bottom: 1px solid #8696a02d;
+    border-bottom: 1px solid var(--border);
 }
 
 .hora{
@@ -238,4 +240,217 @@
 
 .flecha-msj{
     color: transparent;
+}
+
+.fondo-chat{
+    background-image: url('./img/fondo-chat.png');
+    background-size: cover; /* Asegura que la imagen cubra todo el div */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-position: center; /* Centra la imagen dentro del div */
+    width: 100%; /* Ancho del div (ajústalo como necesites) */
+    height: 100vh;
+}
+
+.header-chat{
+    background-color: var(--secod-primary-color);
+    width: 100%;
+    height: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+}
+
+.Nombre-perfil-Chat{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chat-perfil-text{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding: 10px;
+}
+
+.chat-perfil-foto{
+    border-radius: 50%;
+}
+
+.chat-text-name{
+    color: var(--text-color);
+    font-size: 14px;
+}
+
+.chat-text-emi{
+    color: var(--letter-color);
+    font-size: 14px;
+}
+
+.contenedor-header-chat{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    gap: 24px;
+}
+
+.top-left-chat{
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 6px;
+    border: 1px solid var(--letter-hover-color);
+    border-radius: 30px;
+    padding: 8px 10px;
+    cursor: pointer;
+}
+
+.icon-chat-top{
+    color: #aebac1;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.icon-chat-top-left{
+    color: #4c5c66;
+    font-size: 20px;
+}
+
+.icon-chat-top-flecha{
+    color: var(--letter-hover-color);
+    font-size: 12px;
+}
+
+.lupa{
+    font-size: 20px;
+}
+
+.MensajeList{
+    margin-top: 20px;
+}
+
+.cont-Mensaje{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    background-color: var(--color-fond);
+    max-width: 500px;
+    width: fit-content;
+    padding: 12px;
+    margin: 20px 40px;
+    font-size: 14px;
+}
+
+.cont-txt-msj{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.cont-h-sts{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-self: flex-end;
+    margin-bottom: -4px;
+    gap: 6px;
+}
+
+.Mensaje{
+    color: var(--text-color);
+    max-width: 100%; /* Asegura que no se desborde en pantallas pequeñas */
+    word-wrap: break-word; /* Permite el salto de línea automático */
+}
+
+.texto{
+    color: var(--letter-color);
+}
+
+.check{
+    margin-bottom: -3px;
+    margin-top: 4px;
+    font-size: 18px;
+}
+
+.check_visto{
+    color: #53bdeb;
+}
+
+.check-env{
+    margin-top: 3px;
+    font-size: 14px;
+}
+
+.tu{
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.yo{
+    margin-left: auto;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.chat-teclado{
+    display: flex;
+    position: fixed;
+    justify-content: space-between;
+    align-items: center;
+    bottom: 0;
+    width: 66%;
+    height: 60px;
+    background-color: var(--color-fond);
+    padding: 20px;
+}
+
+.icon-teclado-smile{
+    color: var(--letter-color);
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.icon-teclado-plus{
+    color: var(--text-color);
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.icon-teclado-micro{
+    color: var(--letter-color);
+    font-size: 22px;
+    cursor: pointer;
+}
+
+.teclado-cont-icon{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.teclado{
+    background-color: #2a3942;
+    width: 85%;
+    height: 40px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 20px;
+}
+
+.teclado span{
+    color: var(--letter-color);
 }
